--- a/app/views/advertisements/_popover_select_location.html.slim
+++ b/app/views/advertisements/_popover_select_location.html.slim
@@ -1,1 +1,3 @@
 = render 'advertisements/popover_locations'
+.btn-group.row.col-xs-12.hidden-md.hidden-lg.hidden-sm
+    .btn.btn-primary.close_action Применить
