location popover show with adblock fix

--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -58,8 +58,8 @@
           | местоположение
         '
         .form-group.location-group.btn-group multi='true' editable='false' state="#{@location_state}"
-          .btn.btn-default.GetChildren.dropdown-toggle.yaSend yaparam="root_place_selector_press" lid="#{0}" data-toggle="dropdown"
-            i.fa.fa-globe
+          .btn.btn-default.GetChildren.dropdown-toggle yaparam="root_place_selector_press" lid="#{0}" data-toggle="dropdown"
+            i.fa.fa-globe.fa-lg
             '
             i.caret
           .btn.btn-default.disabled
