--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -125,8 +125,8 @@ h2 {
 }
 
 body {
-//  background-image: url(back.png);
-//  background-color: #98a8b7
+  background-image: url(back.png);
+  background-color: #98a8b7
 }
 
 
