--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -125,7 +125,7 @@ h2 {
 }
 
 body {
-  background-image: url(back.png);
+  background-image: asset-url("back.png");
   background-color: #98a8b7
 }
 
