--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -124,11 +124,15 @@ h2 {
   margin-bottom: 15px;
 }
 
-body {
+body
+{
   background-image: asset-url("back.png");
   background-color: #98a8b7
 }
 
+.container {
+  background-color: white;
+}
 
 
 
