--- a/app/views/devise/registrations/_fields.html.slim
+++ b/app/views/devise/registrations/_fields.html.slim
@@ -15,7 +15,7 @@
         | пароль
       -
       .col-sm-4
-        = f.password_field :password, autocomplete: "off", class: 'form-control', required: true, placeholder: '******', minlength: 6
+        = f.password_field :password, autocomplete: "off", class: 'form-control', required: true, placeholder: '******'
 .form-group
   label.control-label.col-sm-2 for='reg-phones'
     i.fa.fa-mobile
